Remove testes redundantes e adiciona cobertura para vulnerabilidades no PainelController